k8s/03-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviecom-db-svc
  namespace: moviecom
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: moviecom-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: moviecom-db
  namespace: moviecom
spec:
  serviceName: "moviecom-db-svc"
  replicas: 1
  selector:
    matchLabels:
      app: moviecom-db
  template:
    metadata:
      labels:
        app: moviecom-db
    spec:
      containers:
        - name: database
          image: docker.io/bartkek/moviecom-db:latest
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
          livenessProbe:
            exec:
              command:
                - mongosh
                - localhost:27017/test
                - --quiet
                - --eval
                - "db.runCommand('ping').ok"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
