k8s/04-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviecom-api-svc
  namespace: moviecom
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: moviecom-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviecom-api
  namespace: moviecom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moviecom-api
  template:
    metadata:
      labels:
        app: moviecom-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - moviecom-api
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: api
          image: docker.io/bartkek/moviecom-api:latest
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /movies/id/573a1390f29313caabcd4eaf
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 15
            failureThreshold: 3
